--- a/.github/workflows/cowsay-ci.yaml
+++ b/.github/workflows/cowsay-ci.yaml
@@ -15,4 +15,19 @@ jobs:
       - name: Verify Docker Image
         run: |
           docker images | grep cowsay
+
+      - name: Run Docker Container
+        run: |
+          docker run -d -p 8080:8080 --name cowsay cowsay:latest
+          sleep 5
+
+      - name: Test Application
+        run: |
+          curl http://localhost:8008 || exit 1
+
+      - name: Cleanup
+        run: |
+          docker stop cowsay
+          docker rm cowsay
+          
       
