--- a/.github/workflows/cowsay-ci.yaml
+++ b/.github/workflows/cowsay-ci.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Test Application
         run: |
-          curl http://localhost:8080/hello || exit 1
+          curl -o /dev/null -s -w "%{http_code}" http://example.com | grep -q 200 || exit 1
 
       - name: Cleanup
         run: |
