--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
           # Increment the patch number
           PATCH=$(echo $CURRENT_VERSION | awk -F. '{print $3}')
           NEW_PATCH=$((PATCH + 1))
-          NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. '{major = $1; minor = $2; patch = $NEW_PATCH; print major "." minor "." patch}')
+          NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. -v patch=$NEW_PATCH '{major = $1; minor = $2; print major "." minor "." patch}')
           echo $NEW_VERSION
           
           # Update version.txt with the new version
