--- a/.github/workflows/cowsay-ci.yaml
+++ b/.github/workflows/cowsay-ci.yaml
@@ -31,7 +31,7 @@ jobs:
           # Increment the patch number
           PATCH=$(echo $CURRENT_VERSION | awk -F. '{print $3}')
           NEW_PATCH=$((PATCH + 1))
-          NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. '{print $1 "." $2 "."}'$NEW_PATCH)
+          NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. -v patch=$NEW_PATCH '{major = $1; minor = $2; print major "." minor "." patch}')
           
           # Update version.txt with the new version
           echo $NEW_VERSION > version.txt
