Add write permissions to GITHUB_TOKEN

--- a/.github/workflows/cowsay-ci.yaml
+++ b/.github/workflows/cowsay-ci.yaml
@@ -14,7 +14,8 @@ jobs:
   build-and-package:
     name: Build and Package Application
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
