--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test $GITHUB_ENV
+name: Test GitHub Actions
 
 on:
   push:
@@ -7,15 +7,9 @@ on:
 
 jobs:
   test-echo:
-    name: Test Echo $GITHUB_ENV
+    name: Test GitHub Actions
     runs-on: ubuntu-latest
     steps:
-      - name: Set an environment variable
-        run: echo "MY_ENV_VAR=Hello World" >> $GITHUB_ENV
-
-      - name: Use the environment variable
-        run: echo $MY_ENV_VAR
-
       - name: Determine Current Version
         id: version
         run: |
@@ -29,7 +23,6 @@ jobs:
           PATCH=$(echo $CURRENT_VERSION | awk -F. '{print $3}')
           NEW_PATCH=$((PATCH + 1))
           NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. -v patch=$NEW_PATCH '{major = $1; minor = $2; print major "." minor "." patch}')
-          echo $NEW_VERSION
           
           # Update version.txt with the new version
           echo $NEW_VERSION > version.txt
@@ -37,3 +30,22 @@ jobs:
           # Export the new version for use in the workflow
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
           echo "Current version: $CURRENT_VERSION, New version: $NEW_VERSION"
+
+      - name: Build Docker Image with Version Tag
+        run: |
+          docker build -t cowsay:$NEW_VERSION .
+          
+      - name: Verify Docker Image
+        run: |
+          docker images | grep cowsay
+          
+      - name: Save Docker Image as Artifact
+        run: |
+          docker save cowsay:$NEW_VERSION | gzip > cowsay-$NEW_VERSION.tar.gz
+          ls -l cowsay-$NEW_VERSION.tar.gz
+          
+      - name: Upload Docker Image Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: cowsay-docker-image
+          path: cowsay-$NEW_VERSION.tar.gz
