--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,22 +33,9 @@ jobs:
           # Export the new version for use in the workflow
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
           echo "Current version: $CURRENT_VERSION, New version: $NEW_VERSION"
-
-      - name: Build Docker Image with Version Tag
-        run: |
-          docker build -t cowsay:$NEW_VERSION .
-          
-      - name: Verify Docker Image
-        run: |
-          docker images | grep cowsay
-          
-      - name: Save Docker Image as Artifact
-        run: |
-          docker save cowsay:$NEW_VERSION | gzip > cowsay-$NEW_VERSION.tar.gz
-          ls -l cowsay-$NEW_VERSION.tar.gz
           
       - name: Upload Docker Image Artifact
         uses: actions/upload-artifact@v4
         with:
           name: cowsay-docker-image
-          path: cowsay-$NEW_VERSION.tar.gz
+          path: version.txt
