--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
           NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. -v patch=$NEW_PATCH '{major = $1; minor = $2; print major "." minor "." patch}')
           
           # Update version.txt with the new version
-          echo $NEW_VERSION > version.txt
+          echo $NEW_VERSION > version-$NEW_VERSION.txt
           
           # Export the new version for use in the workflow
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
@@ -38,4 +38,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: cowsay-docker-image
-          path: version.txt
+          path: version-$NEW_VERSION.txt
