Fix path in upload artifact action

--- a/.github/workflows/cowsay-ci.yaml
+++ b/.github/workflows/cowsay-ci.yaml
@@ -52,13 +52,12 @@ jobs:
       - name: Save Docker Image as Artifact
         run: |
           docker save cowsay:$NEW_VERSION | gzip > cowsay-$NEW_VERSION.tar.gz
-          ls -l cowsay-$NEW_VERSION.tar.gz
 
       - name: Upload Docker Image Artifact
         uses: actions/upload-artifact@v4
         with:
           name: cowsay-docker-image
-          path: cowsay-$NEW_VERSION.tar.gz
+          path: cowsay-${{ env.NEW_VERSION }}.tar.gz
 
       - name: Commit Updated Version File
         run: |
