--- a/.github/workflows/cowsay-ci.yaml
+++ b/.github/workflows/cowsay-ci.yaml
@@ -91,11 +91,11 @@ jobs:
 
       - name: Load Docker Image
         run: |
-          gunzip -c cowsay-$NEW_VERSION.tar.gz | docker load
+          gunzip -c cowsay-${{ env.NEW_VERSION }}.tar.gz | docker load
 
       - name: Run Docker Container
         run: |
-          docker run -d -p 8080:8080 --name cowsay-container cowsay:$NEW_VERSION
+          docker run -d -p 8080:8080 --name cowsay-container cowsay:${{ env.NEW_VERSION }}
           sleep 5
 
       - name: Test Application
@@ -120,7 +120,7 @@ jobs:
 
       - name: Load Docker Image
         run: |
-          gunzip -c cowsay-$NEW_VERSION.tar.gz | docker load
+          gunzip -c cowsay-${{ env.NEW_VERSION }}.tar.gz | docker load
 
       - name: Login to Amazon ECR
         env:
@@ -134,7 +134,7 @@ jobs:
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
-          docker tag cowsay:$NEW_VERSION ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/dev/cowsay:$NEW_VERSION
-          docker tag cowsay:$NEW_VERSION ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/dev/cowsay:latest
-          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/dev/cowsay:$NEW_VERSION
+          docker tag cowsay:${{ env.NEW_VERSION }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/dev/cowsay:${{ env.NEW_VERSION }}
+          docker tag cowsay:${{ env.NEW_VERSION }} ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/dev/cowsay:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/dev/cowsay:${{ env.NEW_VERSION }}
           docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/dev/cowsay:latest
